--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+libguestfs (1.0.54+44git127ad3-3) unstable; urgency=low
+
+  * [a6e6cc7] add virt-inspector
+  * [1446178] build-dep on libaugeas-dev for augeas support in guestfsd
+  * [b3769ed] select kernel by architecture
+  * [103069f] speed up appliance startup
+  * [aa02c11] document changes and release 1.0.54+44git127ad3-3
+
+ -- Guido Günther <agx@sigxcpu.org>  Sat, 04 Jul 2009 17:58:04 +0200
+
 libguestfs (1.0.54+44git127ad3-2) unstable; urgency=low
 
   * [8f1cea9] add missing shlibs dependency
