--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+libguestfs (1.0.84-3) unstable; urgency=low
+
+  * [307bd4e] Add hivex commands.
+  * [7fac596] Build and install fuse helper
+  * [09ea683] Include all virt-* tools including virt-win-reg
+  * [ae3ee70] New patch 0004-Disable-fuser-tests-if-dev-fuse-doesn-t-
+    exist.patch Disable fuse tests if /dev/fuse doesn't exist
+
+ -- Guido Günther <agx@sigxcpu.org>  Sun, 21 Feb 2010 19:40:43 +0100
+
 libguestfs (1.0.84-2) unstable; urgency=low
 
   * [0195df4] Add vendor detection for Ubuntu
