--- a/po-docs/ja/guestfish-actions.pod
+++ b/po-docs/ja/guestfish-actions.pod
@@ -3106,7 +3106,16 @@ some non-zero value documented in the L<ntfs-3g.probe(8)> manual page.
  ntfsresize device
 
 This command resizes an NTFS filesystem, expanding or shrinking it to the
-size of the underlying device.  See also L<ntfsresize(8)>.
+size of the underlying device.
+
+I<Note:> After the resize operation, the filesystem is marked as requiring a
+consistency check (for safety).  You have to boot into Windows to perform
+this check and clear this condition.  Furthermore, ntfsresize refuses to
+resize filesystems which have been marked in this way.  So in effect it is
+not possible to call ntfsresize multiple times on a single filesystem
+without booting into Windows between each resize.
+
+See also L<ntfsresize(8)>.
 
 =head2 ntfsresize-size
 
