--- a/po-docs/ja/guestfish.1
+++ b/po-docs/ja/guestfish.1
@@ -62,7 +62,7 @@
 .\" ========================================================================
 .\"
 .IX Title "guestfish 1"
-.TH guestfish 1 "2011-06-13" "libguestfs-1.10.4" "Virtualization Support"
+.TH guestfish 1 "2011-07-13" "libguestfs-1.10.5" "Virtualization Support"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -4533,7 +4533,16 @@ some non-zero value documented in the \fIntfs\-3g.probe\fR\|(8) manual page.
 .Ve
 .PP
 This command resizes an \s-1NTFS\s0 filesystem, expanding or shrinking it to the
-size of the underlying device.  See also \fIntfsresize\fR\|(8).
+size of the underlying device.
+.PP
+\&\fINote:\fR After the resize operation, the filesystem is marked as requiring a
+consistency check (for safety).  You have to boot into Windows to perform
+this check and clear this condition.  Furthermore, ntfsresize refuses to
+resize filesystems which have been marked in this way.  So in effect it is
+not possible to call ntfsresize multiple times on a single filesystem
+without booting into Windows between each resize.
+.PP
+See also \fIntfsresize\fR\|(8).
 .SS "ntfsresize-size"
 .IX Subsection "ntfsresize-size"
 .Vb 1
