--- a/po-docs/uk/guestfs.3
+++ b/po-docs/uk/guestfs.3
@@ -62,7 +62,7 @@
 .\" ========================================================================
 .\"
 .IX Title "guestfs 3"
-.TH guestfs 3 "2011-06-13" "libguestfs-1.10.4" "Virtualization Support"
+.TH guestfs 3 "2011-07-13" "libguestfs-1.10.5" "Virtualization Support"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -6234,7 +6234,16 @@ On error this function returns \-1.
 .Ve
 .PP
 This command resizes an \s-1NTFS\s0 filesystem, expanding or shrinking it to the
-size of the underlying device.  See also \fIntfsresize\fR\|(8).
+size of the underlying device.
+.PP
+\&\fINote:\fR After the resize operation, the filesystem is marked as requiring a
+consistency check (for safety).  You have to boot into Windows to perform
+this check and clear this condition.  Furthermore, ntfsresize refuses to
+resize filesystems which have been marked in this way.  So in effect it is
+not possible to call ntfsresize multiple times on a single filesystem
+without booting into Windows between each resize.
+.PP
+See also \fIntfsresize\fR\|(8).
 .PP
 This function returns 0 on success or \-1 on error.
 .PP
@@ -10331,6 +10340,11 @@ Automated tests of the C \s-1API\s0.
 .IX Item "cat"
 The \fIvirt\-cat\fR\|(1), \fIvirt\-filesystems\fR\|(1) and \fIvirt\-ls\fR\|(1) commands and
 documentation.
+.ie n .IP """caution""" 4
+.el .IP "\f(CWcaution\fR" 4
+.IX Item "caution"
+Safety and liveness tests of components that libguestfs depends upon (not of
+libguestfs itself).  Mainly this is for qemu and the kernel.
 .ie n .IP """contrib""" 4
 .el .IP "\f(CWcontrib\fR" 4
 .IX Item "contrib"
