--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1.10.5-1) UNRELEASED; urgency=low
+
+  * New upstream version
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 20 Jul 2011 23:08:29 +0200
+
 libguestfs (1.0.84-4) unstable; urgency=low
 
   * [2c44147] Build-depend on aptitude since Ubuntu needs it.
