--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-libguestfs (1.10.5-1) UNRELEASED; urgency=low
+libguestfs (1.10.5-1) experimental; urgency=low
 
   * New upstream version
 
- -- Hilko Bengen <bengen@debian.org>  Wed, 20 Jul 2011 23:08:29 +0200
+ -- Hilko Bengen <bengen@debian.org>  Fri, 29 Jul 2011 23:42:50 +0200
 
 libguestfs (1.0.84-4) unstable; urgency=low
 
