--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-libguestfs (1.10.6-1) UNRELEASED; urgency=low
+libguestfs (1.10.6-1) experimental; urgency=low
 
   * New upstream version
+  * Updated copyright file
 
- -- Hilko Bengen <bengen@debian.org>  Sat, 30 Jul 2011 13:22:04 +0200
+ -- Hilko Bengen <bengen@debian.org>  Sun, 31 Jul 2011 23:25:48 +0200
 
 libguestfs (1.10.5-1) experimental; urgency=low
 
