--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1.10.6-2) experimental; urgency=low
+
+  * [3de1b06] Added missing dependency for libguestfs-ocaml-dev, thanks to
+    Stéphane Glondu
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 01 Aug 2011 16:59:25 +0200
+
 libguestfs (1.10.6-1) experimental; urgency=low
 
   * New upstream version
