Imported Upstream version 1.10.7

--- a/fish/guestfish-actions.pod
+++ b/fish/guestfish-actions.pod
@@ -26,7 +26,7 @@ should probably use L</add-drive-ro> instead.
 =back
 
 This function is deprecated.
-In new code, use the C<add_drive_opts> call instead.
+In new code, use the L</add_drive_opts> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -156,7 +156,7 @@ This is the same as L</add-drive-ro> but it allows you
 to specify the QEMU interface emulation to use at run time.
 
 This function is deprecated.
-In new code, use the C<add_drive_opts> call instead.
+In new code, use the L</add_drive_opts> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -170,7 +170,7 @@ This is the same as L</add-drive> but it allows you
 to specify the QEMU interface emulation to use at run time.
 
 This function is deprecated.
-In new code, use the C<add_drive_opts> call instead.
+In new code, use the L</add_drive_opts> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -951,7 +951,7 @@ C<alloc> command which allocates a file in the host and
 attaches it as a device.
 
 This function is deprecated.
-In new code, use the C<fallocate64> call instead.
+In new code, use the L</fallocate64> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -1311,7 +1311,7 @@ This returns the ext2/3/4 filesystem label of the filesystem on
 C<device>.
 
 This function is deprecated.
-In new code, use the C<vfs_label> call instead.
+In new code, use the L</vfs_label> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -1325,7 +1325,7 @@ This returns the ext2/3/4 filesystem UUID of the filesystem on
 C<device>.
 
 This function is deprecated.
-In new code, use the C<vfs_uuid> call instead.
+In new code, use the L</vfs_uuid> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -3000,7 +3000,7 @@ For VFAT and NTFS the C<blocksize> parameter is treated as
 the requested cluster size.
 
 This function is deprecated.
-In new code, use the C<mkfs_opts> call instead.
+In new code, use the L</mkfs_opts> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -3197,7 +3197,7 @@ use L</mount-options> (use an empty string for the first
 parameter if you don't want any options).
 
 This function is deprecated.
-In new code, use the C<mount_options> call instead.
+In new code, use the L</mount_options> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -4178,7 +4178,7 @@ B<This command is dangerous.  Without careful use you
 can easily destroy all your data>.
 
 This function is deprecated.
-In new code, use the C<part_add> call instead.
+In new code, use the L</part_add> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -4201,7 +4201,7 @@ B<This command is dangerous.  Without careful use you
 can easily destroy all your data>.
 
 This function is deprecated.
-In new code, use the C<part_add> call instead.
+In new code, use the L</part_add> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -4223,7 +4223,7 @@ B<This command is dangerous.  Without careful use you
 can easily destroy all your data>.
 
 This function is deprecated.
-In new code, use the C<part_add> call instead.
+In new code, use the L</part_add> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -4261,7 +4261,7 @@ not intended to be parsed.
 See also: L</part-list>
 
 This function is deprecated.
-In new code, use the C<part_list> call instead.
+In new code, use the L</part_list> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -4902,7 +4902,7 @@ Because of the message protocol, there is a transfer limit
 of somewhere between 2MB and 4MB.  See L<guestfs(3)/PROTOCOL LIMITS>.
 
 This function is deprecated.
-In new code, use the C<write> call instead.
+In new code, use the L</write> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -4999,7 +4999,7 @@ Since 1.0.63, use L</file> instead which can now
 process compressed files.
 
 This function is deprecated.
-In new code, use the C<file> call instead.
+In new code, use the L</file> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
