--- a/po-docs/ja/guestfs-actions.pod
+++ b/po-docs/ja/guestfs-actions.pod
@@ -30,8 +30,8 @@ C<guestfs_add_drive_ro> instead.
 
 This function returns 0 on success or -1 on error.
 
-This function is deprecated.  In new code, use the C<add_drive_opts> call
-instead.
+This function is deprecated.  In new code, use the
+L</guestfs_add_drive_opts> call instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -236,8 +236,8 @@ QEMU interface emulation to use at run time.
 
 This function returns 0 on success or -1 on error.
 
-This function is deprecated.  In new code, use the C<add_drive_opts> call
-instead.
+This function is deprecated.  In new code, use the
+L</guestfs_add_drive_opts> call instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -257,8 +257,8 @@ QEMU interface emulation to use at run time.
 
 This function returns 0 on success or -1 on error.
 
-This function is deprecated.  In new code, use the C<add_drive_opts> call
-instead.
+This function is deprecated.  In new code, use the
+L</guestfs_add_drive_opts> call instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -1387,8 +1387,8 @@ allocates a file in the host and attaches it as a device.
 
 This function returns 0 on success or -1 on error.
 
-This function is deprecated.  In new code, use the C<fallocate64> call
-instead.
+This function is deprecated.  In new code, use the L</guestfs_fallocate64>
+call instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -1866,8 +1866,8 @@ This returns the ext2/3/4 filesystem label of the filesystem on C<device>.
 This function returns a string, or NULL on error.  I<The caller must free
 the returned string after use>.
 
-This function is deprecated.  In new code, use the C<vfs_label> call
-instead.
+This function is deprecated.  In new code, use the L</guestfs_vfs_label>
+call instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -1886,7 +1886,8 @@ This returns the ext2/3/4 filesystem UUID of the filesystem on C<device>.
 This function returns a string, or NULL on error.  I<The caller must free
 the returned string after use>.
 
-This function is deprecated.  In new code, use the C<vfs_uuid> call instead.
+This function is deprecated.  In new code, use the L</guestfs_vfs_uuid> call
+instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -4251,8 +4252,8 @@ cluster size.
 
 This function returns 0 on success or -1 on error.
 
-This function is deprecated.  In new code, use the C<mkfs_opts> call
-instead.
+This function is deprecated.  In new code, use the L</guestfs_mkfs_opts>
+call instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -4549,8 +4550,8 @@ in any code that needs performance, and instead use C<guestfs_mount_options>
 
 This function returns 0 on success or -1 on error.
 
-This function is deprecated.  In new code, use the C<mount_options> call
-instead.
+This function is deprecated.  In new code, use the L</guestfs_mount_options>
+call instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -5940,7 +5941,8 @@ This function returns 0 on success or -1 on error.
 B<This command is dangerous.  Without careful use you can easily destroy all
 your data>.
 
-This function is deprecated.  In new code, use the C<part_add> call instead.
+This function is deprecated.  In new code, use the L</guestfs_part_add> call
+instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -5968,7 +5970,8 @@ This function returns 0 on success or -1 on error.
 B<This command is dangerous.  Without careful use you can easily destroy all
 your data>.
 
-This function is deprecated.  In new code, use the C<part_add> call instead.
+This function is deprecated.  In new code, use the L</guestfs_part_add> call
+instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -6000,7 +6003,8 @@ This function returns 0 on success or -1 on error.
 B<This command is dangerous.  Without careful use you can easily destroy all
 your data>.
 
-This function is deprecated.  In new code, use the C<part_add> call instead.
+This function is deprecated.  In new code, use the L</guestfs_part_add> call
+instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -6055,8 +6059,8 @@ See also: C<guestfs_part_list>
 This function returns a string, or NULL on error.  I<The caller must free
 the returned string after use>.
 
-This function is deprecated.  In new code, use the C<part_list> call
-instead.
+This function is deprecated.  In new code, use the L</guestfs_part_list>
+call instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -6964,7 +6968,8 @@ unless you want to retain compatibility with older versions of the API.
 
 This function returns 0 on success or -1 on error.
 
-This function is deprecated.  In new code, use the C<launch> call instead.
+This function is deprecated.  In new code, use the L</guestfs_launch> call
+instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -7051,7 +7056,8 @@ This function returns 0 on success or -1 on error.
 Because of the message protocol, there is a transfer limit of somewhere
 between 2MB and 4MB.  See L<guestfs(3)/PROTOCOL LIMITS>.
 
-This function is deprecated.  In new code, use the C<write> call instead.
+This function is deprecated.  In new code, use the L</guestfs_write> call
+instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -7211,7 +7217,8 @@ files.
 This function returns a string, or NULL on error.  I<The caller must free
 the returned string after use>.
 
-This function is deprecated.  In new code, use the C<file> call instead.
+This function is deprecated.  In new code, use the L</guestfs_file> call
+instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
