--- a/src/guestfs-actions.pod
+++ b/src/guestfs-actions.pod
@@ -30,7 +30,7 @@ should probably use C<guestfs_add_drive_ro> instead.
 This function returns 0 on success or -1 on error.
 
 This function is deprecated.
-In new code, use the C<add_drive_opts> call instead.
+In new code, use the L</guestfs_add_drive_opts> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -246,7 +246,7 @@ to specify the QEMU interface emulation to use at run time.
 This function returns 0 on success or -1 on error.
 
 This function is deprecated.
-In new code, use the C<add_drive_opts> call instead.
+In new code, use the L</guestfs_add_drive_opts> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -267,7 +267,7 @@ to specify the QEMU interface emulation to use at run time.
 This function returns 0 on success or -1 on error.
 
 This function is deprecated.
-In new code, use the C<add_drive_opts> call instead.
+In new code, use the L</guestfs_add_drive_opts> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -1443,7 +1443,7 @@ attaches it as a device.
 This function returns 0 on success or -1 on error.
 
 This function is deprecated.
-In new code, use the C<fallocate64> call instead.
+In new code, use the L</guestfs_fallocate64> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -1936,7 +1936,7 @@ This function returns a string, or NULL on error.
 I<The caller must free the returned string after use>.
 
 This function is deprecated.
-In new code, use the C<vfs_label> call instead.
+In new code, use the L</guestfs_vfs_label> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -1957,7 +1957,7 @@ This function returns a string, or NULL on error.
 I<The caller must free the returned string after use>.
 
 This function is deprecated.
-In new code, use the C<vfs_uuid> call instead.
+In new code, use the L</guestfs_vfs_uuid> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -4421,7 +4421,7 @@ the requested cluster size.
 This function returns 0 on success or -1 on error.
 
 This function is deprecated.
-In new code, use the C<mkfs_opts> call instead.
+In new code, use the L</guestfs_mkfs_opts> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -4728,7 +4728,7 @@ parameter if you don't want any options).
 This function returns 0 on success or -1 on error.
 
 This function is deprecated.
-In new code, use the C<mount_options> call instead.
+In new code, use the L</guestfs_mount_options> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -6163,7 +6163,7 @@ B<This command is dangerous.  Without careful use you
 can easily destroy all your data>.
 
 This function is deprecated.
-In new code, use the C<part_add> call instead.
+In new code, use the L</guestfs_part_add> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -6193,7 +6193,7 @@ B<This command is dangerous.  Without careful use you
 can easily destroy all your data>.
 
 This function is deprecated.
-In new code, use the C<part_add> call instead.
+In new code, use the L</guestfs_part_add> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -6226,7 +6226,7 @@ B<This command is dangerous.  Without careful use you
 can easily destroy all your data>.
 
 This function is deprecated.
-In new code, use the C<part_add> call instead.
+In new code, use the L</guestfs_part_add> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -6285,7 +6285,7 @@ This function returns a string, or NULL on error.
 I<The caller must free the returned string after use>.
 
 This function is deprecated.
-In new code, use the C<part_list> call instead.
+In new code, use the L</guestfs_part_list> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -7227,7 +7227,7 @@ versions of the API.
 This function returns 0 on success or -1 on error.
 
 This function is deprecated.
-In new code, use the C<launch> call instead.
+In new code, use the L</guestfs_launch> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -7317,7 +7317,7 @@ Because of the message protocol, there is a transfer limit
 of somewhere between 2MB and 4MB.  See L<guestfs(3)/PROTOCOL LIMITS>.
 
 This function is deprecated.
-In new code, use the C<write> call instead.
+In new code, use the L</guestfs_write> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
@@ -7486,7 +7486,7 @@ This function returns a string, or NULL on error.
 I<The caller must free the returned string after use>.
 
 This function is deprecated.
-In new code, use the C<file> call instead.
+In new code, use the L</guestfs_file> call instead.
 
 Deprecated functions will not be removed from the API, but the
 fact that they are deprecated indicates that there are problems
